thursday 2nd commit

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -1214,6 +1214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Crime analysis by Neighborhood \n",
     "Rent=Rental_DF[[\"Price\",\"Lat\",\"Long\"]]\n",
     "Rent_d=pd.DataFrame(Rent)\n",
     "crime=Crime_DF.loc[Crime_DF[\"occurrenceyear\"]==2018,[\"event_unique_id\",\"MCI\",\"occurrenceyear\",\"Neighbourhood\"]]\n",
@@ -1342,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1409,7 @@
        "Kensington-Chinatown (78)                                  815"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,8 +1417,8 @@
    "source": [
     "# Most Unsafe places to Rent as per crime rate in 2018\n",
     "\n",
-    "safe_Place=CountByA_Data.sort_values(\"Total count of offence\",ascending=False)\n",
-    "safe_Place.head()"
+    "unsafe_Place=CountByA_Data.sort_values(\"Total count of offence\",ascending=False)\n",
+    "unsafe_Place.head()"
    ]
   },
   {
